// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListRow marks the list row as complete if the list is marked as completed 1`] = `
<tr
  className="negative"
>
  <td
    className=""
  >
    Avengers - Age of Ultron
  </td>
  <td
    className=""
  >
    Invalid Date
  </td>
  <td
    className=""
  >
    Invalid Date
  </td>
  <td
    className=""
  >
    <a
      className="ui pink label"
      href="/project/Thor/lists"
      onClick={[Function]}
    >
       
      Thor
    </a>
    <a
      className="ui pink label"
      href="/project/Loki/lists"
      onClick={[Function]}
    >
       
      Loki
    </a>
  </td>
  <td
    className=""
  >
    <button
      className="ui teal icon button button-divider"
      disabled={undefined}
      id="1234456"
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
      title="List has been Completed"
    >
      <i
        aria-hidden="true"
        className="lock icon"
      />
    </button>
    <a
      className="ui blue icon button"
      disabled={undefined}
      href="/list/view/1234456"
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
      title="View/Update List"
    >
      <i
        aria-hidden="true"
        className="list layout icon"
      />
    </a>
    <a
      className="ui green icon button"
      disabled={undefined}
      href="/list/update/1234456"
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
      title="Amend List Setup"
    >
      <i
        aria-hidden="true"
        className="edit icon"
      />
    </a>
    <button
      className="ui pink icon button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
      title="Delete List"
      value="1234456"
    >
      <i
        aria-hidden="true"
        className="trash icon"
      />
    </button>
  </td>
</tr>
`;

exports[`ListRow renders correctly 1`] = `
<tr
  className=""
>
  <td
    className=""
  >
    Avengers - Age of Ultron
  </td>
  <td
    className=""
  >
    Invalid Date
  </td>
  <td
    className=""
  >
    Invalid Date
  </td>
  <td
    className=""
  >
    <a
      className="ui pink label"
      href="/project/Thor/lists"
      onClick={[Function]}
    >
       
      Thor
    </a>
    <a
      className="ui pink label"
      href="/project/Loki/lists"
      onClick={[Function]}
    >
       
      Loki
    </a>
  </td>
  <td
    className=""
  >
    <button
      className="ui violet icon button button-divider"
      disabled={undefined}
      id="1234456"
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
      title="List is Active"
    >
      <i
        aria-hidden="true"
        className="unlock icon"
      />
    </button>
    <a
      className="ui blue icon button"
      disabled={undefined}
      href="/list/view/1234456"
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
      title="View/Update List"
    >
      <i
        aria-hidden="true"
        className="list layout icon"
      />
    </a>
    <a
      className="ui green icon button"
      disabled={undefined}
      href="/list/update/1234456"
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
      title="Amend List Setup"
    >
      <i
        aria-hidden="true"
        className="edit icon"
      />
    </a>
    <button
      className="ui pink icon button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
      title="Delete List"
      value="1234456"
    >
      <i
        aria-hidden="true"
        className="trash icon"
      />
    </button>
  </td>
</tr>
`;
